pom.xml updated to allow packaging of jar file on Windows/OSX